# shop-db-qt-qml-cmake

./: .gitignore  CMakeLists.txt  db_connection.qml  qml.qrc
src/: dbconnector.cpp  dbconnector.hpp  main.cpp  main.qml
